[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/cell_background.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/glycolysis/second_part.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/glycolysis/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/glycolysis/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/glycolysis/ATP.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Main.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/glycolysis/ADP.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="first_part" type="Node"]
script = ExtResource( 2 )
next_scene = ExtResource( 6 )
avoid_scene = ExtResource( 5 )
pickup_scene = ExtResource( 7 )
pickup_ratio = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="cell_background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -0.0210085
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneratingPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="GeneratingPath"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 440 )
spawn_collected = ExtResource( 5 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
